--- a/uj/zajecia/25-26z/ljk4/index.html
+++ b/uj/zajecia/25-26z/ljk4/index.html
@@ -79,7 +79,7 @@
 			</tr>
 			<tr>
 				<td class="schedule-lecture">한자</td>
-				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/znaki/2">分 나눌 분</a></td>
+				<td class="schedule-lecture">한자 복습</td>
 			</tr>
 			<tr>
 				<th rowspan="2" scope="row">3</th>
@@ -95,17 +95,17 @@
 				<th rowspan="2" scope="row">4</th>
 				<td rowspan="2">2025년 10월 29일</td>
 				<td class="schedule-lecture">읽기</td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/czytanie/1">시험지 1</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture">한자</td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/znaki/2">分 나눌 분</a></td>
 			</tr>
 			<tr>
 				<th rowspan="2" scope="row">5</th>
 				<td rowspan="2">2025년 11월 5일</td>
 				<td class="schedule-lecture">읽기</td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/czytanie/2">시험지 2</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture">한자</td>
