--- a/uj/zajecia/25-26z/ljk4/zajecia/czytanie/1/index.html
+++ b/uj/zajecia/25-26z/ljk4/zajecia/czytanie/1/index.html
@@ -26,7 +26,7 @@
 </div>
 <div class="exam-question">
 	<h3>2.</h3>
-	<p>2. 어제는 친구들과 같이 점심을 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 바로 도서관에 갔다.</p>
+	<p>어제는 친구들과 같이 점심을 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 바로 도서관에 갔다.</p>
 	<ol>
 		<li>먹든지</li>
 		<li>먹거나</li>
@@ -73,7 +73,7 @@
 <div class="exam-question">
 	<h3>6.</h3>
 	<div>
-		<img src="uj/zajecia/25-26z/ljk4/zajecia/czytanie/1/img/6.png" alt="5">
+		<img src="uj/zajecia/25-26z/ljk4/zajecia/czytanie/1/img/6.png" alt="6">
 	</div>
 	<ol>
 		<li>전화 예절 <strong class="correct">✓</strong></li>
@@ -85,7 +85,7 @@
 <div class="exam-question">
 	<h3>7.</h3>
 	<div>
-		<img src="uj/zajecia/25-26z/ljk4/zajecia/czytanie/1/img/7.png" alt="5">
+		<img src="uj/zajecia/25-26z/ljk4/zajecia/czytanie/1/img/7.png" alt="7">
 	</div>
 	<ol>
 		<li>환경 보호 <strong class="correct">✓</strong></li>
@@ -97,7 +97,7 @@
 <div class="exam-question">
 	<h3>8.</h3>
 	<div>
-		<img src="uj/zajecia/25-26z/ljk4/zajecia/czytanie/1/img/8.png" alt="5">
+		<img src="uj/zajecia/25-26z/ljk4/zajecia/czytanie/1/img/8.png" alt="8">
 	</div>
 	<ol>
 		<li>우체국</li>
@@ -153,7 +153,7 @@
 		<li>학부모들은 정장형 교복을 더 좋아한다.</li>
 		<li>새 교복은 정장형 교복보다 가격이 비싸다.</li>
 		<li>기존 교복에 비해 새 교복은 활동할 때 불편하다.</li>
-		<li>학교는 학생들의 의견을 받아들여서 교복을 바꿨다.</li>
+		<li>학교는 학생들의 의견을 받아들여서 교복을 바꿨다. <strong class="correct">✓</strong></li>
 	</ol>
 </div>
 
@@ -169,7 +169,7 @@
 	<ol>
 		<li>(나)-(다)-(라)-(가)</li>
 		<li>(나)-(라)-(가)-(다)</li>
-		<li>(다)-(나)-(가)-(라)</li>
+		<li>(다)-(나)-(가)-(라) <strong class="correct">✓</strong></li>
 		<li>(다)-(나)-(라)-(가)</li>
 	</ol>
 </div>
@@ -183,7 +183,7 @@
 	</div>
 	<ol>
 		<li>(가)-(다)-(라)-(나)</li>
-		<li>(나)-(가)-(다)-(라)</li>
+		<li>(나)-(가)-(다)-(라) <strong class="correct">✓</strong></li>
 		<li>(가)-(라)-(나)-(다)</li>
 		<li>(나)-(라)-(다)-(가)</li>
 	</ol>
@@ -197,7 +197,7 @@
 		<p>(라) 그래서 어머니는 우리 형제 다섯을 낳을 때마다 미역국을 드셔야 했다.</p>
 	</div>
 	<ol>
-		<li>(나)-(다)-(라)-(가)</li>
+		<li>(나)-(다)-(라)-(가) <strong class="correct">✓</strong></li>
 		<li>(나)-(가)-(라)-(다)</li>
 		<li>(다)-(가)-(라)-(나)</li>
 		<li>(다)-(라)-(나)-(가)</li>
@@ -214,7 +214,7 @@
 		<li>입장료를 할인해 주는</li>
 		<li>공연장에서 인기가 있는</li>
 		<li>유행하는 노래가 나오는</li>
-		<li>각 배우들의 개성이 담긴</li>
+		<li>각 배우들의 개성이 담긴 <strong class="correct">✓</strong></li>
 	</ol>
 </div>
 <div class="exam-question">
