--- a/uj/zajecia/24-25z/wats3-1/index.html
+++ b/uj/zajecia/24-25z/wats3-1/index.html
@@ -78,11 +78,11 @@
 
 	<ul class="sample-topics">
 		<li>folklor/szamanizm</li>
-		<li>motoryzacja</li>
 		<li>niska dzietność</li>
 		<li>popkultura</li>
 		<li><del>bieżące sprawy</del></li>
 		<li><del>militaria (Polska-Korea)</del></li>
+		<li><del>motoryzacja</del></li>
 		<li><del>opieka psychologiczna/psychiatryczna</del></li>
 	</ul>
 </details>
@@ -160,8 +160,8 @@
 				<th scope="row">5</th>
 				<td>15 listopada</td>
 				<td class="schedule-lecture">Zajęcia</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">motoryzacja</td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25z/wats3-1/zajecia/5">13층서 떨어지는 충격…'치사율 3배'인데 안전띠 착용률 뚝</a></td>
 			</tr>
 		</tbody>
 		<tbody>
