--- a/uj/zajecia/24-25z/wats3-1/zajecia/4/index.html
+++ b/uj/zajecia/24-25z/wats3-1/zajecia/4/index.html
@@ -161,9 +161,29 @@
 <h3>번역</h3>
 
 <p>10-1. 18세 이하 청소년의 정신과 진료 건수는 4년 새 65%나 폭증했고</p>
+<ul>
+	<li>Liczba przypadków nastolatków poniżej 18 roku życia leczących się psychiatrycznie gwałtownie wzrosła o 65%</li>
+	<li>Liczba przypadków korzystania z opieki psychiatrycznej wśród nastolatków poniżej 18. roku życia wzrosła gwałtownie w ciągu 4 lat o 65%.</li>
+	<li>W przeciągu 4 lat liczba przypadków nastolatków, poniżej 18 roku życia, leczonych w klinice psychiatrycznej gwałtownie wzrosła o 65%</li>
+</ul>
 <p>10-2. 올해는 상반기에만 약 25만명으로 지난해의 80%에 달하고 있습니다.</p>
+<ul>
+	<li>Tylko w pierwszej połowie roku, było to 250 000 osób, co stanowi blisko 80% zeszłorocznej liczby osób leczących się psychiatrycznie.</li>
+	<li>Tylko w pierwszej połowie tego roku liczba ta wyniosła około 250 000, co stanowi 80% zeszłorocznego wyniku.</li>
+	<li>W pierwszej połowie tego roku liczba ta zbliżyła się do około 250 000 osób, co stanowi 80% wyniku z zeszłego roku.</li>
+</ul>
 <p>11. 스마트폰 소지를 금지한 전국의 초등학교는 전체 1만 1700여교 중 23% 정도입니다.</p>
+<ul>
+	<li>Ze wszystkich 11 700 szkół podstawowych, około 23% z nich wprowadza zakaz posiadania telefonów.</li>
+	<li>Spośród wszystkich szkół podstawowych w kraju, 23% z około 11 700 zakazało korzystania ze smartfonów.</li>
+	<li>Około 23% z 11 700 szkół podstawowych w kraju zabroniło używania smartphonów.</li>
+</ul>
 <p>12. 전문가들은 최소한 중학생 전까진 스마트폰에 노출되지 않는게 바람직하다고 지적합니다.</p>
+<ul>
+	<li>Specjaliści twierdzą, że zalecane jest unikanie wystawienia na kontakt ze smartfonami do co najmniej gimnazjum.</li>
+	<li>Specjaliści zalecają, by nie wystawiać się na działanie smartfonów przynajmniej do czasu ukończenia gimnazjum.</li>
+	<li>Specjaliści zalecają, aby nie mieć kontaktu ze smartphonami aż do czasu ukończenia gimnazjum.</li>
+</ul>
 
 <h2>Źródło:</h2>
 
