--- a/uj/zajecia/24-25z/wats3-2/testy/1/index.html
+++ b/uj/zajecia/24-25z/wats3-2/testy/1/index.html
@@ -30,8 +30,41 @@
 	<h3>번역</h3>
 
 	<p>0-1. 16년 만에 드러난 진실</p>
+	<ul>
+		<li>0-1. Prawda ujawniona po 16 latach</li>
+		<li>0-1. Prawda, która została ujawniona po 16 latach</li>
+		<li>0-1. Po 16 latach prawda została ujawniona</li>
+		<li>0-1. Prawda ujawniona po 16 latach</li>
+		<li>0-1. Prawda, która wyszła na jaw po 16 latach.</li>
+		<li>0-1. Prawda została ujawniona po 16 latach</li>
+		<li>0-1. Prawda, która wyszła na jaw dopiero po 16 latach</li>
+		<li>0-1. Prawda odkryta po 16 latach</li>
+		<li></li>
+	</ul>
 	<p>0-2. 동거녀 ‘시멘트 살인’ 피의자 “혐의 인정”</p>
+	<ul>
+		<li>0-2. „Przyznaję się do zarzutów” – mówi oskarżony w sprawie „cementowego zabójstwa” swojej partnerki</li>
+		<li>0-2. Morderstwo kobiety zalanej cementem, sprawca przyznaje się do winy.</li>
+		<li>0-2. Oskarżony o “cementowe zabójstwo” otrzymał zarzuty</li>
+		<li>0-2. Oskarżony o "morderstwo w cemencie" partnerki przyznaje się do zarzutów</li>
+		<li>0-2. Oskarżony o „morderstwo cementowe” zamieszkującej z nim partnerki: „Przyznaję się do zarzutów”.</li>
+		<li>0-2. Podejrzany o “morderstwo cementowe” przyznaje się do zarzutów.</li>
+		<li>0-2. Oskarżony przyznał się do zarzutów „zabójstwa w cemencie” wspólnie mieszkającej partnerki.</li>
+		<li>0-2. oskarżony o „cementowe morderstwo” swojej konkubiny przyznaje się do podejrzeń</li>
+		<li></li>
+	</ul>
 	<p>0-3. 범행 동기는 ‘여성 외도’</p>
+	<ul>
+		<li>0-3. Motywem zbrodni zdrada kobiety</li>
+		<li>0-3. Motywem miała być "niewierność kobiet".</li>
+		<li>0-3. Powodem była “zdrada kobiety”</li>
+		<li>0-3. Motywem zbrodni była "zdrada kobiety"</li>
+		<li>0-3. Motywem przestępstwa była "zdrada kobiety".</li>
+		<li>0-3. Motyw przestępstwa: „zdrada kobiety”</li>
+		<li>0-3. Motywem przestępstwa była „zdrada kobiety“.</li>
+		<li>0-3. Motywem przestępstwa „zdrada kobiety“</li>
+		<li></li>
+	</ul>
 </div>
 
 <div class="exam-question">
@@ -49,7 +82,29 @@
 	<h3>번역</h3>
 
 	<p>1-1. 10월 31일 경남 거제에서 열었던 첫 공판에서 남성 A 씨(58) 측 변호인은</p>
+	<ul>
+		<li>1-1. 31 października podczas pierwszego posiedzenia sądu w mieście Geoje w prowincji Gyeongsan Południowy obrońca 58-letniego mężczyzny</li>
+		<li>1-1. 31 października w Geoje, w prowincji południowe Gyeongsang, prawnik otworzył pierwsze przesłuchanie Pana "A", lat 58.</li>
+		<li>1-1. 31 października odbyło się pierwsze przesłuchanie w miejscowości Geoje w południowej prowincji Gyeongsang i adwokat oskarżonego (58 lat) stwierdził, że</li>
+		<li>1-1. podczas pierwszego otwartego posiedzenia które odbyło się 31 października w Geoje, w prowincji Południowego Gyeonsang, adwokat Pana A (58 lat)</li>
+		<li>1-1. Na pierwszym posiedzeniu sądu, które odbyło się 31 października w Geoje w prowincji Gyeongnam adwokat strony 58-letniego mężczyzny oświadczył</li>
+		<li>1-1. 31 października w mieście Geoje podczas pierwszego posiedzenie adwokat 58-letniego mężczyzny powiedział że</li>
+		<li>1-1. 31 października w prowincji Południowego Gyeongsangu w mieście Geoje, na po raz pierwszy otwartym posiedzeniu, adwokat 58 letniego oskarżonego mężczyzny</li>
+		<li>1-1. 31 października na pierwszym otwartym posiedzeniu sądu w prowincji Gyeongsangnam-do adwokat reprezentujący stronę mężczyzny</li>
+		<li></li>
+	</ul>
 	<p>1-2. “공소사실에 대해 전부 인정한다”고 말했다.</p>
+	<ul>
+		<li>1-2. przekazał, że jego klient „przyznaje się do wszystkich stawianych mu zarzutów”.</li>
+		<li>1-2. "Przyznaję się do wszystkich zarzutów", powiedział.</li>
+		<li>1-2. Oskarżony przyznaje sie do zarzutów</li>
+		<li>1-2. powiedział: „Przyznaje się do wszystkich zarzutów"</li>
+		<li>1-2. „W pełni uznajemy wszystkie zarzuty”.</li>
+		<li>1-2. W pełni przyznajemy się do zarzutów przedstawionych w akcie oskarżenia.</li>
+		<li>1-2. powiedział, że ten przyznał się do wszystkich zarzutów.</li>
+		<li>1-2. powiedział, że on „przyznaje się do wszystkich zarzutów”.</li>
+		<li></li>
+	</ul>
 </div>
 
 <div class="exam-question">
@@ -70,15 +125,68 @@
 	<h3>번역</h3>
 
 	<p>2. A 씨는 그의 동거녀인 B 씨가 다른 남성과 이성적인 연락을 하거나 만난다고 의심했다.</p>
+	<ul>
+		<li>2. Oskarżony podejrzewał, iż jego partnerka spotykała się bądź utrzymywała romantyczne kontakty z innym mężczyzną.</li>
+		<li>2. Pan "A" podejrzewał, że kobieta, z którą mieszkał, Pani "B", kontaktowała się i spotykała z innym mężczyzną.</li>
+		<li>2. Oskarżony podejrzewał partnerkę o uczucia do innego mężczyzny i kontakt a także spotykanie się z nim.</li>
+		<li>2. A podejrzewał, że jego partnerka B żywiła uczucia do innego mężczyzny i spotykała się z nim</li>
+		<li>2. A podejrzewał, że jego dziewczyna B, z którą mieszka kontaktowała się lub żywiła uczucia względem innego mężczyzny.</li>
+		<li>2. Mężczyzna podejrzewał, że jego partnerka ma uczucia romantyczne lub spotyka się z innym mężczyzną.</li>
+		<li>2. Sprawca podejrzewał, że jego partnerka żywiąc uczucia do innego mężczyzny miała się z nim kontaktować lub spotykać.</li>
+		<li>2. Mężczyzna podejrzewał swoją konkubinę o kontakty i spotykanie się z innym mężczyzną, do którego żywiła uczucie.</li>
+		<li></li>
+	</ul>
 	<p>3. 그런 이유로 잦은 다툼도 벌였다.</p>
+	<ul>
+		<li>3. Z tego powodu dochodziło między nimi również do częstych kłótni.</li>
+		<li>3. Z tego powodu, często się kłócili.</li>
+		<li>3. Z tego powodu często się kłócili.</li>
+		<li>3. Ten powód rozpoczynał wiele kłótni</li>
+		<li>3. Z tego powodu często się kłócili</li>
+		<li>3. Z tego powodu, często dochodziło do kłótni.</li>
+		<li>3. Z tego powodu wynikały częste kłótnie między nimi.</li>
+		<li>3. Z tego powodu wybuchały też częste kłótnie.</li>
+		<li></li>
+	</ul>
 	<p>4. 2008년 10월 귀가하던 A 씨는 다른 남성과 도망가려는 B 씨를 목격했다.</p>
+	<ul>
+		<li>4. W październiku 2008 r. podczas powrotu do domu oskarżony zauważył, że jego partnerka próbuje uciec z innym mężczyzną.</li>
+		<li>4. W październiku 2008 roku, kiedy Pan "A" wracał do domu, był świadkiem próby ucieczki Pani "B" z innym mężczyzną.</li>
+		<li>4. W 2008 roku w październiku oskarżony był świadkiem tego, jak jego partnerka próbowała uciec z innym mężczyzną.</li>
+		<li>4. W październiku 2008 roku, wracając do domu, mężczyzna A zauważył, jak B próbuje uciec z innym mężczyzną</li>
+		<li>4. We wrześniu 2008 roku po powrocie do domu A był świadkiem próby ucieczki B z innym mężczyzną.</li>
+		<li>4. W październiku w 2008 roku, wracając do domu mężczyzna zauważył swoją partnerkę, która próbowała uciec z innym mężczyzną.</li>
+		<li>4. W październiku 2008 r. mężczyzna wróciwszy do domu, był świadkiem partnerki z innym osobnikiem.</li>
+		<li>4. W październiku 2008 roku idąc do domu, mężczyzna zauważył konkubinę uciekającą z innym mężczyzną.</li>
+		<li></li>
+	</ul>
 </div>
 
 <div class="exam-question">
 	<h3>Bonus</h3>
 
 	<p>5. 격분한 A 씨는 B 씨에게 “어떻게 이럴 수 있냐”며 소리를 질렀다.</p>
+	<ul>
+		<li>5. W napadzie szału krzyczał na nią pytając „jak w ogóle mogła coś takiego zrobić”.</li>
+		<li>5. Rozwścieczony Pan "A" wykrzyczał do Pani "B" - "Jak mogłaś to zrobić!?"</li>
+		<li>5. Wściekły mężczyzna (oskarżony) krzyczał do partnerki “jak mogłaś to zrobić”.</li>
+		<li>5. A krzyknął do B: „Jak możesz to zrobić?”</li>
+		<li>5. Rozgniewany A krzyknął do B: „Jak mogłaś to zrobić?”</li>
+		<li>5. Rozgniewany mężczyzna wykrzyczał: „Jak mogłaś to zrobić?”.</li>
+		<li>5. Sprawca pod wpływem wściekłości nakrzyczał na kobietę mówiąc: „jak mogłaś mi to zrobić?".</li>
+		<li>5. Wściekły mężczyzna wykrzyczał przerażonym tonem: „jak mogłaś mi to zrobić”.</li>
+	</ul>
 	<p>6. 주방에 있던 냄비로 피해자 머리를 수차례 내리쳐 그 자리에서 사망하게 했다.</p>
+	<ul>
+		<li>6. Przyniósł z kuchni garnek, po czym uderzył nim kilka razy w głowę kobiety, doprowadzając do jej śmierci na miejscu.</li>
+		<li>6. Będąc w kuchni, wziął garnek i uderzył ofiarę kilkukrotnie w głowę, doprowadzając do zgonu na miejscu.</li>
+		<li>6. Uderzył ją w kuchni garnkiem w głowę kilka razy zabijając na miejscu.</li>
+		<li>6. Następnie wielokrotnie uderzył ją w głowę garnkiem z kuchni, co spowodowało jej natychmiastową śmierć na miejscu.</li>
+		<li>6. Następnie przy użyciu chochli będącej w kuchni wielokrotnie uderzał ofiarę w głowę, co doprowadziło do jej śmierci na miejscu.</li>
+		<li>6. W głównym pokoju będącym naczyniem, oskarżony parę razy u i w tym miejscu</li>
+		<li></li>
+		<li></li>
+	</ul>
 </div>
 
 <h3>Cały tekst:</h3>
