--- a/uj/zajecia/24-25z/wats3-2/zajecia/4/index.html
+++ b/uj/zajecia/24-25z/wats3-2/zajecia/4/index.html
@@ -152,11 +152,69 @@
 <h2 class="homework">Praca domowa</h2>
 
 <p>7-2. "산림복구 전투를 힘있게 벌여</p>
+<ul>
+	<li>powiedział: ,,Musimy walczyć z oddaniem o odbudowę lasów,</li>
+	<li>powiedział: “Musimy walczyć o odbudowę lasów</li>
+	<li>Prowadząc z pasją bitwę o odbudowę terenów leśnych,</li>
+	<li>powiedział: „Musimy prowadzić walkę o przywrócenie lasów,</li>
+	<li>„Musimy prowadzić walkę o odbudowę lasów</li>
+	<li>„Musimy prowadzić energiczną bitwę o odbudowę lasów</li>
+</ul>
 <p>7-3. 조국의 산들을 푸른 숲이 우거진 황금산으로 전변시켜야 합니다."라고 했습니다.</p>
+<ul>
+	<li>Żeby odmienić nasze ojczyste góry w zieloną krainę mlekiem i miodem płynącą”</li>
+	<li>7-2/3. "należy przeprowadzić intensywną walkę o odbudowę lasów, aby odmienić góry naszej ojczyzny w złote góry, porośnięte zielonymi lasami.”</li>
+	<li>i przeobrazić ojczyste góry z zielonymi lasami w złote góry”.</li>
+	<li>należy odmienić los gór koreańskich poprzez rozrastającą się zielonymi lasami górę Hwangym.</li>
+	<li>oraz zmienić góry naszego kraju w zielone, zalesione, pokryte złotem miejsce”.</li>
+	<li>i przekształcić nasze góry w złote góry porośnięte gęstymi, zielonymi lasami.” -orzekł.</li>
+	<li>7-2/3. „należy z pełną mocą prowadzić bitwę o przywrócenie zalesionych gór, tak aby ojczyste góry pokryły się zielonymi lasami i przemieniły się w złote góry”.</li>
+	<li>i przekształcić góry ojczyzny w porosnięte zielonymi lasami Złote Góry.”</li>
+</ul>
 <p>8-1. 하지만 이런 노력에도</p>
+<ul>
+	<li>Natomiast, mimo takiego wysiłku</li>
+	<li>Jednak pomimo tych wysiłków</li>
+	<li>Jednak pomimo tych wysiłków</li>
+	<li>Jednakże, pomimo starań,</li>
+	<li>Jednak pomimo wysiłku,</li>
+	<li>Jednak pomimo tego wysiłku,</li>
+	<li>Mimo wysiłków,</li>
+	<li>Jednak mimo tych wysiłków,</li>
+</ul>
 <p>8-2. 북한 전체 산림의 30% 정도는 여전히 황무지 상태로 남아있습니다.</p>
+<ul>
+	<li>Ok. 30% całości zalesienia Korei Północnej, wciąż pozostaje w stanie pustkowi.</li>
+	<li>w całości około 30% lasów wciąż pozostaje w stanie pustkowia</li>
+	<li>w Korei Północnej wciąż około 30% całości gór i lasów pozostaje pustkowiem.</li>
+	<li>ok. 30% całości lasów Korei Północnej wciąż pozostaje w stanie opustoszenia.</li>
+	<li>około 30% wszystkich lasów w Korei Północnej to pustkowia.</li>
+	<li>około 30% wszystkich północnokoreańskich lasów wciąż pozostaje w stanie pustkowia.</li>
+	<li>około 30% wszystkich terenów lesistych w Korei Północnej wciąż pozostaje pustkowiem.</li>
+	<li>około 30% północnokoreańskich lasów wciąż pozostaje w stanie pustynnienia.</li>
+</ul>
 <p>9-1. 전문가들은 무분별한 벌목도 문제지만</p>
+<ul>
+	<li>Wg. specjalistów nawet masowa wycinka drzew jest problemem, ale</li>
+	<li>Eksperci wskazują, że bezmyślne wycinanie jest problemem jednak</li>
+	<li>Eksperci twierdzą, że problemem, oprócz masowej wycinki</li>
+	<li>Eksperci wskazują, że o ile nieostrożny wyrąb lasu jest problemem,</li>
+	<li>Eksperci mówią, że nieprzemyślana wycinka jest problemem, ale</li>
+	<li>Eksperci wskazują, że nie tylko niekontrolowana wycinka jest problemem,</li>
+	<li>Eksperci wskazują na to, że masowa wycinka drzew jest problemem,</li>
+	<li>Eksperci zwracają uwagę, że problemem jest nie tylko niekontrolowana wycinka drzew,</li>
+</ul>
 <p>9-2. 해마다 나무를 심어도 활착률, 즉 심은 나무의 생존률이 낮다는 점이 걸림돌이라 지적합니다.</p>
+<ul>
+	<li>Podkreślają jako przeszkodę, mimo sadzenia, spadający z roku na rok odsetek ukorzeniania drzew, czyli szansę przeżycia posadzonych drzew.</li>
+	<li>również pomimo corocznego sadzenia drzew, przeszkodą jest niski wskaźnik ich ukorzenienia, to znaczy wskażnik przeżycia sadzonych drzew.</li>
+	<li>jest również niski odsetek przeżywalności nowo posadzonych drzew, co każdego roku stanowi istotną przeszkodę.</li>
+	<li>niski odsetek ukorzeniania się zasadzonych drzew, czyli niski odsetek ich przeżycia jest przeszkodą.</li>
+	<li>nawet sadząc drzewa co roku, podkreślają, że niska przeżywalność drzew stanowi kolejną przeszkodę.</li>
+	<li>ale również niski odsetek ukorzeniania, czyli przeżycia sadzonych drzew jest przeszkodą pomimo corocznego sadzenia nowych drzew.</li>
+	<li>lecz kolejną przeszkodę stanowi roczny odsetek ukorzeniania sadzonych drzew – czyli wskaźnik przeżycia drzew – który jest niski.</li>
+	<li>ale także niski wskaźnik przeżywalności posadzonych drzew, co stanowi główną przeszkodę.</li>
+</ul>
 
 <hr class="homework">
 
