--- a/uj/zajecia/24-25z/wats3-1/testy/1/index.html
+++ b/uj/zajecia/24-25z/wats3-1/testy/1/index.html
@@ -29,7 +29,19 @@
 	<h3>번역</h3>
 
 	<p>0. 급식비 지원 '제로'…배달시키거나 도시락 싸는 소방관들</p>
+	<ul>
+		<li>0. Zero środków na posiłki – strażacy zamawiają albo przynoszą własne jedzenie</li>
+		<li>0. Strażacy mają spakowane drugie śniadania lub dostawę jedzenia z zerowym wsparciem kosztów posiłku.</li>
+		<li>0. Zerowe wsparcie posiłków... lub dostarczenie dań instant (drugiego śniadania) dla strażaków</li>
+		<li>0. "Zerowe wsparcie w przygotowaniu posiłków" - Dostarczanie i pakowanie posiłków dla strażaków.</li>
+	</ul>
 	<p>1. 강원 소방서 77곳 중 42곳 예산 미지원…처우 개선 절실</p>
+	<ul>
+		<li>1. Brak środków finansowych dla 42 z 77 jednostek straży pożarnej w prowincji Gangwon; Dość już złego traktowania strażaków</li>
+		<li>1. Jednostka straży pożarnej Gangwon między nr 77 a nr 42 nie ma żadnego budżetowego wsparcia... Złe traktowanie wymagające nagłej poprawy.</li>
+		<li>1. 42 z 77 jednostek straży pożarnej w Gangwon nie ma wsparcia budżetu ... poprawa złego traktowania jest nagląca</li>
+		<li>1. Spośród 77 jednostek straży pożarnej w prowincji Gangwon budżet w 42 z nich wzbudza szok i potrzebę nagłej poprawy sytuacji.</li>
+	</ul>
 </div>
 
 <div class="exam-question">
@@ -52,8 +64,26 @@
 	<h3>번역</h3>
 
 	<p>2-1. 강원도민의 안전과 생명을 지키기 위해</p>
+	<ul>
+		<li>2-1. Aby zapewnić bezpieczeństwo i ratować życie mieszkańców prowincji Gangwon</li>
+		<li>2-1. Dla ochrony życia i bezpieczeństwa mieszkańców prowincji Gangwon</li>
+		<li>2-1. By chronić bezpieczeństwo i życie mieszkańców Gangwon</li>
+		<li>2-1. Aby chronić życie i bezpieczeństwo mieszkańców prowincji Gangwon</li>
+	</ul>
 	<p>2-2. 소방관들이 밤낮없이 땀을 흘리고 있다.</p>
+	<ul>
+		<li>2-2. strażacy pracują w pocie czoła dzień i noc.</li>
+		<li>2-2. Strażacy wylewają pot dzień i noc.</li>
+		<li>2-2. Ze strażaków nocą i dniem leje się pot.</li>
+		<li>2-2. strażacy dzień i noc wylewają pot.</li>
+	</ul>
 	<p>3. 하지만 급식 운영 예산 지원조차 받지 못하는 소방서가 수두룩하다.</p>
+	<ul>
+		<li>3. Mimo to jest wiele jednostek, które w ogóle nie otrzymują środków na posiłki dla strażaków.</li>
+		<li>3. Ale podstawowa jednostka straży pożarnej nie może nawet otrzymać wsparcia finansowego dla funkcjonowania posiłków.</li>
+		<li>3. Jednak, że nie otrzymywanie wsparcia dla funkcjonowania budżetu na posiłki jest na porządku dziennym.</li>
+		<li>3. Jednak bez możliwości otrzymania wsparcia finansowego, stworzona dla strażaków stołówka nie jest w stanie funkcjonować.</li>
+	</ul>
 </div>
 
 <div class="exam-question">
@@ -71,15 +101,45 @@
 	<h3>번역</h3>
 
 	<p>4-1. 도내 모든 소방서에서 급식을 운영하기 위해 드는 예산은 16억6천만원이지만,</p>
+	<ul>
+		<li>4-1. Choć budżet pozwalający zapewnić posiłki dla strażaków we wszystkich jednostkach w prowincji to 16,6 mld wonów,</li>
+		<li>4-1. Budżet każdej jednostki w prowincji wydaje na posiłki 1 606 000 0000.</li>
+		<li>4-1. Koszt wszystkich posiłków strażaków wynosi 16 mld wonów</li>
+		<li>4-1. Aby zapewnić wszystkim strażakom w prowincji posiłki, potrzebny jest budżet w wysokości 16 miliardów wonów</li>
+	</ul>
 	<p>4-2. 현재 지원 중인 예산은 약 7억원뿐이다.</p>
+	<ul>
+		<li>4-2. otrzymywane obecnie wsparcie finansowe wynosi zaledwie 7 mld wonów.</li>
+		<li>4-2. Obecnie wsparcie finansowe wynosi około 700 mln wonów.</li>
+		<li>4-2. Obecnie budżet dla wsparcia publicznego wynosi około 700 000 000 mld wonów.</li>
+		<li>4-2. jednak obecnie wsparcie wynosi około 7 miliardów wonów.</li>
+	</ul>
 	<p>5. 드는 예산 절반에도 미치지 못하는 실정이다.</p>
+	<ul>
+		<li>5. Jest to kwota niepokrywająca nawet połowy budżetu.</li>
+		<li>5. Jest to sytuacja, w której nie można osiągnąć wsparcia wynoszącego połowę kosztów.</li>
+		<li>5. Koszt posiłków nie osiąga połowy budżetu.</li>
+		<li>5. Jest to sytuacja, kiedy wsparcie nie osiąga nawet połowy potrzebnego budżetu.</li>
+	</ul>
 </div>
 
 <div class="exam-question">
 	<h3>Bonus</h3>
 
 	<p>6. 119안전센터 42곳에는 급식 운영 예산을 한 푼도 지원받지 못하고 있다.</p>
+	<ul>
+		<li>6. 42 jednostki pogotowia nie otrzymują żadnego wsparcia finansowego na posiłki.</li>
+		<li>6. Centrum Bezpieczeństwa 119 w jednostce nr 42 nie może otrzymać wsparcia na funkcjonowanie posiłków.</li>
+		<li>6. 42 Jednostki pogotowia nie otrzymały wsparcia na finansowanie posiłków.</li>
+		<li>6. Bez wsparcia finansowego nawet jedna z 42 jednostek ze wszystkich 119 nie jest w stanie funkcjonować.</li>
+	</ul>
 	<p>7. 급식시설이 있음에도 음식을 만들 조리원을 채용할 예산이 '제로(0)'라는 의미다.</p>
+	<ul>
+		<li>7. Oznacza to, że nawet gdy w jednostce znajduje się stołówka, budżet na zatrudnienie kucharzy wynosi "zero" wonów.</li>
+		<li>7. Oznacza to zerowe</li>
+		<li>7. Budżet na przygotowywanie jedzenia</li>
+		<li>7. Oznacza to że budżet na zatrudnienie kucharzy wynosi zero, mimo że</li>
+	</ul>
 </div>
 
 <h3>Cały tekst:</h3>
