--- a/uj/zajecia/24-25z/wats3-2/index.html
+++ b/uj/zajecia/24-25z/wats3-2/index.html
@@ -79,7 +79,6 @@
 	<ul class="sample-topics">
 		<li>architektura</li>
 		<li>branża beauty (np. kosmetyki)</li>
-		<li>dyplomacja</li>
 		<li>e-sport</li>
 		<li>historia (np. życie króla koreańskiego)</li>
 		<li>katastrofy przyrodnicze</li>
@@ -92,6 +91,7 @@
 		<li>społeczeństwo</li>
 		<li>wojskowość</li>
 		<li><del>botanika/florystyka</del></li>
+		<li><del>dyplomacja</del></li>
 		<li><del>mowa potoczna</del></li>
 		<li><del>sprawy kryminalne</del></li>
 	</ul>
@@ -170,8 +170,8 @@
 				<th scope="row">5</th>
 				<td>15 listopada</td>
 				<td class="schedule-lecture">Zajęcia</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">dyplomacja</td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25z/wats3-2/zajecia/5">수신호하고 따로 걷고…첩보영화처럼 北공작원 만난 창원간첩단</a></td>
 			</tr>
 		</tbody>
 		<tbody>
