--- a/viiilo/zajecia/25-26/jk3/index.html
+++ b/viiilo/zajecia/25-26/jk3/index.html
@@ -75,12 +75,12 @@
 			<tr>
 				<th scope="row">10</th>
 				<td>2025년 12월 4일</td>
-				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
 				<th scope="row">11</th>
 				<td>2025년 12월 11일</td>
-				<td class="schedule-lecture" colspan="2"><a href="viiilo/zajecia/25-26/jk3/zajecia/5">4. 청바지에다가 티셔츠를 입으려고 해요</a></td>
+				<td class="schedule-lecture"><a href="viiilo/zajecia/25-26/jk3/zajecia/5">4. 청바지에다가 티셔츠를 입으려고 해요</a></td>
+				<td class="schedule-presentation"><a href="viiilo/zajecia/25-26/jk3/zajecia/5-1">한국의 가족</a></td>
 			</tr>
 			<tr>
 				<th scope="row">12</th>
