--- a/uj/index.html
+++ b/uj/index.html
@@ -213,6 +213,12 @@
 
 <h2>Referaty</h2>
 
+<h3>The Recent Paradigms in Korean Studies – MGTOW Gentlemen and MIC Barbarians<br>International Conference, Department of Korean Studies, University of Warsaw</h3>
+
+<ul>
+	<li><a href="uj/referaty/uw/2025">[2025] Understanding the Obstacles in Learning and Using <i>Banmal</i> and <i>Nopimmal</i> by Korean Language Learners</a></li>
+</ul>
+
 <h3>International Jagiellonian University Conference on Korean Studies</h3>
 
 <ul>
