--- a/uj/zajecia/24-25l/ljk5/index.html
+++ b/uj/zajecia/24-25l/ljk5/index.html
@@ -174,7 +174,7 @@
 			<tr>
 				<th scope="row">13</th>
 				<td>18 czerwca 2025</td>
-				<td class="schedule-exam" colspan="2"><!--a href="uj/zajecia/24-25l/ljk5/testy/4"-->Egzamin <nobr>(9.00–10.00, s. 2.02)</nobr></a></td>
+				<td class="schedule-exam" colspan="2"><a href="uj/zajecia/24-25l/ljk5/testy/czytanie/3">Egzamin <nobr>(9.00–10.00, s. 2.02)</nobr></a></td>
 			</tr>
 		</tbody>
 	</table>
