--- a/uj/zajecia/25-26z/assk/index.html
+++ b/uj/zajecia/25-26z/assk/index.html
@@ -149,7 +149,7 @@
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 2</td>
-				<td class="schedule-presentation">Alicja Kozłowska - Postać dziewczyny w białym ubraniu: koreańska „Cheonyeo Gwisin” (천녀귀신), a polska „Południca”, „Morowa Dziewica” i „Cicha”</td>
+				<td class="schedule-presentation">Alicja Kozłowska - Postać dziewczyny w białym ubraniu: koreańska „Cheonyeo Gwisin” (처녀귀신), a polska „Południca”, „Morowa Dziewica” i „Cicha”</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 3</td>
@@ -157,7 +157,7 @@
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 4</td>
-				<td class="schedule-presentation">Łukasz Jeruzal</td>
+				<td class="schedule-presentation">Łukasz Jeruzal - Porównanie komiksu polskiego i manhwy na przykładzie „Kajko i Kokosza” oraz „Solo Leveling”</td>
 			</tr>
 			<tr>
 				<th scope="row" rowspan="5">11</th>
@@ -171,7 +171,7 @@
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 7</td>
-				<td class="schedule-presentation">Natalia Lupa</td>
+				<td class="schedule-presentation">Natalia Lupa - Przedstawienie natury w malarstwie Koreańskim i Polskim. Analiza wybranych symboli</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 8</td>
@@ -179,7 +179,7 @@
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 9</td>
-				<td class="schedule-presentation">Oliwia Kowalczyk</td>
+				<td class="schedule-presentation">Oliwia Kowalczyk - Koreański Mulgwisin i słowiański Topiecel - wodne duchy w folklorze Korei i Słowian</td>
 			</tr>
 			<tr>
 				<th scope="row" rowspan="6">12</th>
@@ -197,7 +197,7 @@
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 13</td>
-				<td class="schedule-presentation">Marta Rezmer</td>
+				<td class="schedule-presentation">Marta Rezmer - Społeczna rola kobiecego krakowskiego stroju ludowego oraz koreańskiego hanboku na przełomie XIX - XX wieku</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 14</td>
