--- a/uj/zajecia/25-26z/licc/index.html
+++ b/uj/zajecia/25-26z/licc/index.html
@@ -152,7 +152,7 @@
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 4</td>
-				<td class="schedule-presentation">Beniamin Bracki - Ritual and Music: <i>Jongmyo jeryeak</i> in Korea's Confucian tradition</td>
+				<td class="schedule-presentation">Beniamin Bracki - Ritual and Music: <i>Jongmyo Jeryeak</i> in Korea's Confucian Tradition</td>
 			</tr>
 			<tr>
 				<th scope="row" rowspan="4">12</th>
@@ -176,7 +176,7 @@
 				<th scope="row" rowspan="5">13</th>
 				<td rowspan="5">27 January 2026</td>
 				<td class="schedule-presentation">Presentation 9</td>
-				<td class="schedule-presentation">Zofia Kobylińska</td>
+				<td class="schedule-presentation">Zofia Kobylińska - Respect vs. Social Status: a study of bullying in Confucian-influenced South Korea</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 10</td>
