--- a/uj/zajecia/25-26z/assk/index.html
+++ b/uj/zajecia/25-26z/assk/index.html
@@ -166,7 +166,7 @@
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 6</td>
-				<td class="schedule-presentation">Oliwia Urbanik</td>
+				<td class="schedule-presentation">Oliwia Urbanik - Porównanie stroju Sarmaty i arystokraty z czasów Joseon</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 7</td>
