--- a/uj/zajecia/25-26z/licc/index.html
+++ b/uj/zajecia/25-26z/licc/index.html
@@ -176,7 +176,7 @@
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 9</td>
-				<td class="schedule-presentation">Hanna Chomen</td>
+				<td class="schedule-presentation">Hanna Chomen - <i>Jesa</i>: Confucian Ancestral Rites and the Gendered Face of Tradition</td>
 			</tr>
 			<tr>
 				<th scope="row" rowspan="5">13</th>
