--- a/uj/zajecia/24-25l/ljk5/index.html
+++ b/uj/zajecia/24-25l/ljk5/index.html
@@ -57,6 +57,16 @@
 		<li>bonus za promocję kultury koreańskiej: ?</li>
 	</ul>
 
+	<h3>Znaki chińskie</h3>
+
+	<ul>
+		<li>obecność: 20%</li>
+		<li>kolokwia: 40%</li>
+		<li>egzamin: 40%</li>
+		<li>bonus za obecność: 2%</li>
+		<li>bonus za promocję kultury koreańskiej: ?</li>
+	</ul>
+
 	<p>Dwie nieusprawiedliwione nieobecności nie wpływają na ocenę za obecność. Każda kolejna nieobecność skutkuje zmniejszeniem oceny za obecność o 10%, tj. z 20% na 10% oraz z 10% na 0% <strong>Warunkiem zaliczenia zajęć jest uczestnictwo w minimum 12 zajęciach oraz napisanie wszystkich kolokwiów i egzaminu.</strong></p>
 </details>
 
@@ -382,6 +392,117 @@
 				<td>18 czerwca 2025</td>
 				<td class="schedule-exam"><!--a href="uj/zajecia/24-25l/ljk5/testy/tlumaczenie/4"-->Egzamin <nobr>(10.15–11.15, s. 2.05)</nobr></a></td>
 				<td class="schedule-exam"></td>
+				<td class="schedule-exam"></td>
+			</tr>
+		</tbody>
+	</table>
+</div>
+
+<h3>Znaki chińskie</h3>
+
+<div class="class-schedule-container">
+	<table class="class-schedule">
+		<thead>
+			<tr>
+				<th scope="col">Tydzień</th>
+				<th scope="col">Data</th>
+				<th scope="col">Rodzaj</th>
+				<th scope="col">Temat</th>
+			</tr>
+		</thead>
+
+		<tbody>
+			<tr>
+				<th scope="row">1</th>
+				<td>6 marca 2025</td>
+				<td class="schedule-lecture" rowspan="5">Zajęcia</td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25l/ljk5/zajecia/znaki/1">Wprowadzenie</a></td>
+			</tr>
+			<tr>
+				<th scope="row">2</th>
+				<td>13 marca 2025</td>
+				<td class="schedule-lecture"></td>
+			</tr>
+			<tr>
+				<th scope="row">3</th>
+				<td>20 marca 2025</td>
+				<td class="schedule-lecture"></td>
+			</tr>
+			<tr>
+				<th scope="row">4</th>
+				<td>27 marca 2025</td>
+				<td class="schedule-lecture"></td>
+			</tr>
+			<tr>
+				<th scope="row">5</th>
+				<td>3 kwietnia 2025</td>
+				<td class="schedule-lecture"></td>
+			</tr>
+		</tbody>
+		<tbody>
+			<tr>
+				<th scope="row" rowspan="2">6</th>
+				<td rowspan="2">10 kwietnia 2025</td>
+				<td class="schedule-exam"><!--a href="uj/zajecia/24-25l/ljk5/testy/1"-->Kolokwium 1<!--/a--></td>
+				<td class="schedule-exam"></td>
+			</tr>
+			<tr>
+				<td class="schedule-lecture" rowspan="5">Zajęcia</td>
+				<td class="schedule-lecture"></td>
+			</tr>
+			<tr>
+				<th scope="row">7</th>
+				<td>24 kwietnia 2025</td>
+				<td class="schedule-lecture"></td>
+			</tr>
+			<tr>
+				<th scope="row">8</th>
+				<td>8 maja 2025</td>
+				<td class="schedule-lecture"></td>
+			</tr>
+			<tr>
+				<th scope="row">9</th>
+				<td>15 maja 2025</td>
+				<td class="schedule-lecture"></td>
+			</tr>
+			<tr>
+				<th scope="row">10</th>
+				<td>22 maja 2025</td>
+				<td class="schedule-lecture"></td>
+			</tr>
+		</tbody>
+		<tbody>
+			<tr>
+				<th scope="row" rowspan="2">11</th>
+				<td rowspan="2">29 maja 2025</td>
+				<td class="schedule-exam"><!--a href="uj/zajecia/24-25l/ljk5/testy/tlumaczenie/2"-->Kolokwium 2<!--/a--></td>
+				<td class="schedule-exam"></td>
+			</tr>
+			<tr>
+				<td class="schedule-lecture" rowspan="5">Zajęcia</td>
+				<td class="schedule-lecture"></td>
+			</tr>
+			<tr>
+				<th scope="row">12</th>
+				<td>5 czerwca 2025</td>
+				<td class="schedule-lecture"></td>
+			</tr>
+			<tr>
+				<th scope="row">13</th>
+				<td>12 czerwca 2025</td>
+				<td class="schedule-lecture"></td>
+			</tr>
+			<tr>
+				<th scope="row">14</th>
+				<td>19 czerwca 2025</td>
+				<td class="schedule-lecture"></td>
+			</tr>
+		</tbody>
+		<tbody>
+			<tr>
+				<th scope="row">15</th>
+				<td>26 czerwca 2025</td>
+				<td class="schedule-exam"><!--a href="uj/zajecia/24-25l/ljk5/testy/tlumaczenie/4"-->Egzamin <nobr>(10.00–11.00, s. 2.01)</nobr></a></td>
 				<td class="schedule-exam"></td>
 			</tr>
 		</tbody>
