--- a/uj/zajecia/24-25z/wats3-1/index.html
+++ b/uj/zajecia/24-25z/wats3-1/index.html
@@ -86,6 +86,7 @@
 		<li><del>niska dzietność</del></li>
 		<li><del>opieka psychologiczna/psychiatryczna</del></li>
 		<li><del>polityka</del></li>
+		<li><del>przestępczość</del></li>
 	</ul>
 </details>
 
@@ -236,8 +237,8 @@
 			</tr>
 			<tr>
 				<td class="schedule-lecture">Zajęcia</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">przestępczość</td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25z/wats3-1/zajecia/10">찢고 붙이고…5만원권 5장, 6장으로 만든 30대</a></td>
 			</tr>
 		</tbody>
 		<tbody>
