--- a/uj/zajecia/24-25z/wats3-1/testy/2/index.html
+++ b/uj/zajecia/24-25z/wats3-1/testy/2/index.html
@@ -33,8 +33,23 @@
 	<h3>번역</h3>
 
 	<p>0. 수면 장애·도박 빚까지 … 청소년 스마트폰 중독 심각</p>
+	<ul>
+		<li>0. Problemy ze snem i pożyczki na hazard- poważne uzależnienie od smartfonów wśród nastolatków. <span class="correct">[1,5/2 - pożyczki → długi]</span></li>
+		<li>0. Zaburzenia snu a nawet pożyczki hazardowe... Poważne uzależnienie od smartfonów u nastolatków <span class="correct">[1,5/2 - pożyczki → długi]</span></li>
+		<li>0. Od problemów ze snem, aż do pożyczek na hazard - powaga uzależnienia nastolatków od smartphonów <span class="correct">[1,5/2 - pożyczek → długów; smartfonów]</span></li>
+	</ul>
 	<p>1-1. 중학교 2학년생인 아들을 둔 A(44) 씨는</p>
+	<ul>
+		<li>1-1. Pan A (lat 44), którego syn jest w drugiej klasie gimnazjum powiedział, <span class="correct">[1,5/2 - Pan A → rodzic]</span></li>
+		<li>1-1. Pani A (lat 44), która ma syna w drugiej klasie gimnazjum, <span class="correct">[1,5/2 - Pani A → rodzic]</span></li>
+		<li>1-1. Pan A (lat 44), który ma dziecko w drugiej klasie gimnazjum, <span class="correct">[1/2 - Pan A → rodzic; dziecko → syna]</span></li>
+	</ul>
 	<p>1-2. 요즘 스마트폰 사용 문제로 자녀와 자주 다툰다.</p>
+	<ul>
+		<li>1-2. że ostatnio często kłóci się z synem o używanie smartfonu. <span class="correct-maxpoints">[2/2]</span></li>
+		<li>1-2. ostatnio często kłóci się z nim przez problem, jakim jest używanie smartfona. <span class="correct-maxpoints">[2/2]</span></li>
+		<li>1-2. ostatnio często kłoci się na temat używania smartphonów. <span class="correct">[1,5/2 - kłóci się z synem/nim]</span></li>
+	</ul>
 </div>
 
 <div class="exam-question">
@@ -47,8 +62,22 @@
 	<h3>번역</h3>
 
 	<p>2. 밥 먹을 때 뿐만 아니라 화장실에 갈 때도 스마트폰을 들고 가는 자녀를 보면 ‘중독’이 아닌지 걱정된다.</p>
+	<ul>
+		<li>2. Gdy widzi swojego syna używającego telefonu nie tylko podczas jedzenia, ale także korzystania z łazienki zaczyna się martwić czy to nie jest już uzależnienie. <span class="correct">[1,5/2 - łazienki → toalety]</span></li>
+		<li>2. Widzi syna, który używa go nie tylko podczas jedzenia, ale też podczas pobytu w toalecie, dlatego martwi się, czy nie jest to "uzależnienie". <span class="correct-maxpoints">[2/2 - bez cudzysłowu w j. polskim]</span></li>
+		<li>2. Gdy widzę dziecko używające smartphona podczas jedzenia kolacji albo również podczas pójścia do toalety, martwię się. <span class="correct">[1/2 - a nawet podczas pójścia do toalety; brakuje „uzależnienia”]</span></li>
+	</ul>
 	<p>3-1. A 씨는 “잠들기 전까지 스마트폰을 놓지 못하는데</p>
+	<ul>
+		<li>3-1. Pan A powiedział: "»Nie może odłożyć telefonu dopóki nie zaśnie« <span class="correct-maxpoints">[2/2]</span></li>
+		<li>3-1. Pan A aż do czasu zaśnięcia nie jest w stanie przestać używać smartphona <span class="correct">[1/2 - tematem rozmowy jest syn]</span></li>
+	</ul>
 	<p>3-2. ‘친구들도 다 이렇게 쓴다’고 하니 어떻게 해야 할지 모르겠다”고 말했다.</p>
+	<ul>
+		<li>3-2. takie wiadomości dostaję od wszystkich swoich znajomych i nie wiem co mogę z tym zrobić" <span class="correct">[0,5/2 - to syn mówi, że wszyscy jego znajomi w taki sposób używają telefonów]</span></li>
+		<li>3-2. "Przyjaciele również o tym piszą, nie wiem co można z tym zrobić" mówi. <span class="correct">[0,5/2 - w większości inny sens]</span></li>
+		<li>3. "Przed snem nie jest w stanie odłożyć telefonu. Mówi tylko, że jego przyjaciele też tak robią. Nie wiem, co mam robić" - powiedziała. <span class="correct">[1,5/2 - dopóki nie zaśnie + 2/2]</span></li>
+	</ul>
 </div>
 
 <div class="exam-question">
@@ -63,14 +92,34 @@
 	<h3>번역</h3>
 
 	<p>4-1. 인터넷 게임, SNS에 이어 숏폼(짧은 동영상)이 유행하면서</p>
+	<ul>
+		<li>4-1. Popularne wśród młodzieży gry internetowe i krótkie treści (nagrania wideo) zamieszczane w mediach społecznościowych <span class="correct">[1/2 - wraz z popularnością; gry sieciowe, media społecznościowe i krótkie treści]</span></li>
+		<li>4-1. Odkąd gry internetowe, shorty (krótkie filmiki) na mediach społecznościowych są popularne, <span class="correct">[1/2 - gry sieciowe, media społecznościowe i shorty]</span></li>
+		<li>4-1. Podczas, gdy z roku na rok gry internetowe, social media, krótkie filmiki są popularne <span class="correct">[1/2 - bez „z roku na rok”; wraz z popularnością]</span></li>
+	</ul>
 	<p>4-2. 청소년 스마트폰 중독 현상이 심각해졌다.</p>
+	<ul>
+		<li>4-2. mogą być powodem epidemii uzależnień od smartfonów wśród nastolatków. <span class="correct">[1/2 - są powodem]</span></li>
+		<li>4-2. poważniejsze staje się zjawisko uzależnienia nastolatków od smartfonów. <span class="correct">[1,5/2 - stało się]</span></li>
+		<li>4-2. zjawisko uzależnienia nastolatków od smartphonów stało się poważniejsze. <span class="correct-maxpoints">[2/2]</span></li>
+	</ul>
 </div>
 
 <div class="exam-question">
 	<h3>Bonus</h3>
 
 	<p>5-1. 코로나19 유행 기간 온라인 수업 등에 익숙해진 청소년들이</p>
+	<ul>
+		<li>5-1. Nastolatkowie, którzy w trakcie pandemii COVID19 zostali zmuszeni do uczestniczenia w zajęciach online <span class="correct">[0,5/1 - przyzwyczaili się]</span></li>
+		<li>5-1. Nastolatkowie, którzy w trakcie epidemii COVID-19 przywykli do zajęć online itp., <span class="correct-maxpoints">[1/1 - bez „itp.”]</span></li>
+		<li>5-1. Okres trwania epidemi Covid-19 przyzwyczaił nastolatków do zajęć online <span class="correct-maxpoints">[1/1]</span></li>
+	</ul>
 	<p>5-2. 엔데믹 이후에도 인터넷, 스마트폰에 빠져 지내는 것이다.</p>
+	<ul>
+		<li>5-2. Po zakończeniu pandemii wciąż dużo korzystają z Internetu i smartfonów. <span class="correct-maxpoints">[1/1]</span></li>
+		<li>5-2. również po pandemii spędzają czas w Internecie i na smartfonach. <span class="correct-maxpoints">[1/1]</span></li>
+		<li>5-2. nawet po skończeniu się pandemii, nie mogą przestać używać smartphonów. <span class="correct">[0,75/1 - brakuje „Internetu”]</span></li>
+	</ul>
 </div>
 
 <h3>Cały tekst:</h3>
