--- a/uj/zajecia/24-25z/wats3-2/index.html
+++ b/uj/zajecia/24-25z/wats3-2/index.html
@@ -81,7 +81,6 @@
 		<li>branża beauty (np. kosmetyki)</li>
 		<li>historia (np. życie króla koreańskiego)</li>
 		<li>katastrofy przyrodnicze</li>
-		<li>kuchnia koreańska</li>
 		<li>moda (np. high fashion)</li>
 		<li>popkultura</li>
 		<li>relacje międzykoreańskie</li>
@@ -90,6 +89,7 @@
 		<li><del>botanika/florystyka</del></li>
 		<li><del>dyplomacja</del></li>
 		<li><del>e-sport</del></li>
+		<li><del>kuchnia koreańska</del></li>
 		<li><del>mowa potoczna</del></li>
 		<li><del>polityka</del></li>
 		<li><del>sprawy kryminalne</del></li>
@@ -269,8 +269,8 @@
 			</tr>
 			<tr>
 				<td class="schedule-lecture">Zajęcia</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">kuchnia koreańska</td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25z/wats3-2/zajecia/9">‘아아’ vs ‘뜨아’…한국인의 커피 ♥ 어느 정도길래?</a></td>
 			</tr>
 		</tbody>
 		<tbody>
